<resources>
    <string name="app_name">Hungry</string>
    <string name="OK">OK</string>

    <string name="restaurant_image">Restaurant Image</string>
    <string name="delivery">Delivery</string>
    <string name="dine_out">Dine-out</string>
    <string name="take_away">Take Away</string>
    <string name="could_not_fetch_generic">Could not fetch the details. Please try again later.</string>
    <string name="open_now">Open Now</string>
    <string name="closed">Closed</string>
    <string name="search">Search</string>
    <string name="could_not_find_any_search_result_for_the_given_query">Could not find any search result for the given query.</string>
    <string name="performs_the_search_operation">Performs the search operation</string>
    <string name="reviews">Reviews</string>
    <string name="share">Share</string>
    <string name="share_rest_info">Share restaurant information</string>
    <string name="powered_by_zomato_api">Powered by Zomato</string>

    <string name="notify_user">The application uses basic Zomato API to display information.
        This application is intended only for the purpose of learning. Also note, that this application may or may not work for you based on the API usage limit.
        Continue if you agree or else please exit.</string>
    <string name="favourites">Favourites</string>
    <string name="rest_fav_marked">Restaurant marked as favourite.</string>
    <string name="rest_fav_cannot_marked">The requested action could not be performed.</string>
    <string name="rest_fav_unmarked">Restaurant removed as favourite</string>
    <string name="using_zomato_developer_api">Zomato Developer API</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="send_otp">Send OTP</string>
    <string name="or">OR</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="skip">Skip</string>
    <string name="hi_nice_to_meet_you">Hi, nice to meet you!</string>
    <string name="set_your_location">Set your location to start exploring restaurants around you</string>
    <string name="use_current_location">Use current location</string>
    <string name="set_your_location_manually">Set your location manually</string>
    <string name="location_disclaimer">We only access your location while you are using the app to improve your experience.</string>
    <string name="dining">Dining</string>
    <string name="nightlife">Nightlife</string>
    <string name="profile">Profile</string>
    <string name="curated_collections">Curated collections</string>
    <string name="see_all">see all</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="places_you_might_want_to_try">Places you might want to try</string>
    <string name="menu_overview">Overview</string>
    <string name="menu_foodmenu">Menu</string>
    <string name="menu_photos">Photos</string>
    <string name="menu_reviews">Reviews</string>
    <string name="address">ADDRESS</string>
    <string name="images_from_zomato">Images from Zomato</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="other_info">Other Info</string>
    <string name="search_all_hint">Restaurant name, cuisine or a dish...</string>
    <string name="cuisine">Cuisine</string>
    <string name="restaurants">Restaurants</string>
    <string name="try_something_new">Try something new</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_order">Order</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="payments">Payments</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="rate_us_on_the_play_store">Rate us on the Play Store</string>
    <string name="log_out">Log out</string>
    <string name="about">About</string>
</resources>
