<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LocationAccessPermission">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/iv_access_location"
        android:src="@drawable/ic_access_location"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/space_10"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_hi_there"
        android:layout_marginTop="@dimen/space_2"
        android:text="@string/hi_nice_to_meet_you"
        android:fontFamily="@font/metropolis_semibold"
        android:textColor="@color/black"
        android:textSize="@dimen/font_5"
        android:layout_gravity="center"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_set_your_location"
        android:text="@string/set_your_location"
        android:fontFamily="@font/metropolis_regular"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/space_3"
        android:layout_marginStart="@dimen/space_15"
        android:layout_marginEnd="@dimen/space_15"
        android:paddingStart="@dimen/space_2"
        android:paddingEnd="@dimen/space_2"
        android:layout_gravity="center"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_auto_location"
        android:background="@color/colorPrimary"
        android:text="@string/use_current_location"
        android:textColor="@color/white"
        android:fontFamily="@font/metropolis_regular"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/space_10"
        android:layout_marginStart="@dimen/space_5"
        android:layout_marginEnd="@dimen/space_5"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_set_manual_location"
        android:text="@string/set_your_location_manually"
        android:fontFamily="@font/metropolis_regular"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/space_5"
        android:layout_marginStart="@dimen/space_15"
        android:layout_marginEnd="@dimen/space_15"
        android:paddingStart="@dimen/space_2"
        android:paddingEnd="@dimen/space_2"
        android:layout_gravity="center"
        />

</LinearLayout>