<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activity.PhotoViewerActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/iv_image"
        android:scaleType="fitCenter"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        tools:src="@drawable/default_card_bg"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_next"
        android:layout_alignParentEnd="true"
        android:layout_above="@id/tv_disclaimer"
        android:text="@string/next"
        android:textAllCaps="false"
        android:layout_marginBottom="@dimen/space_3"
        android:layout_marginEnd="@dimen/space_3"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_prev"
        android:layout_alignParentStart="true"
        android:layout_above="@id/tv_disclaimer"
        android:text="@string/previous"
        android:textAllCaps="false"
        android:layout_marginBottom="@dimen/space_3"
        android:layout_marginStart="@dimen/space_3"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_disclaimer"
        android:text="@string/images_from_zomato"
        android:textColor="@color/tyrolean"
        android:textSize="@dimen/font_4"
        android:textAlignment="center"
        android:shadowColor="@color/tyrolean"
        android:shadowDx="1"
        android:shadowDy="-1"
        android:layout_marginBottom="@dimen/space_5"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>